# llm-zoomcamp-2026-code

./: .gitignore  agents.ipynb  notebook.ipynb  persistant_rag_ingest.ipynb  pyproject.toml  rag.ipynb
dlt_workshop/: 2026-07-23_agent_traces_pipeline_analysis_plan.md  CLAUDE.md  agent_traces_pipeline_dashboard.py  app.py  filesystem_pipeline.py  pyproject.toml  rest_api_pipeline.py
dlt_workshop/.dlt/: .toolkits  config.toml
llm-zoomcamp-hw5/: homework.ipynb
module_01_agentic_rag/: agents.ipynb  notebook.ipynb  persistent_rag.ipynb  pyproject.toml  rag_helper.py
module_01_agentic_rag/homework/: notebook.ipynb  rag_helper.py
module_02_vector_search/: homework.ipynb  main.py  pyproject.toml  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
module_03_orchestration/: docker-compose.yml  main.py  pyproject.toml
module_03_orchestration/lessons/: 03-setup.md
module_04_evaluation/: main.py  pyproject.toml
module_04_evaluation/lessons/: 02_ground_truth.ipynb  02_search_evaluation.ipynb  03_rag_evals.ipynb  04-search-evaluation.ipynb  04_llm_judge.ipynb  05_agent_evaluation.ipynb  homework.ipynb
module_04_evaluation/lessons/data/: agent-answers.csv  ground_truth-new.csv  rag-answers-new.csv  rag-evaluations-new.csv
module_04_evaluation/lessons/utils/: evaluation_utils.py
module_05_monitoring/: Makefile  app.py  assistant.py  dashboard.py  db_feedback.py  db_init.py  db_query.py  db_save.py  judge.py  lessons.ipynb  main.py  metrics.py  pyproject.toml
