[project]
name = "module-02-vector-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gitsource>=0.0.5",
    "minsearch>=0.1.1",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "openai>=2.43.0",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.1.1",
    "tokenizers>=0.22.2",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.19.0",
    "jupyter>=1.1.1",
]
