[project]
name = "module-04-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gitsource>=0.0.5",
    "minsearch>=0.2.0",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.3",
]
